overflow scroll fix

--- a/src/Pages/Login/Styles/styles.module.scss
+++ b/src/Pages/Login/Styles/styles.module.scss
@@ -2,7 +2,8 @@
     display: flex;
     flex-direction: column;
     gap: 15px;
-    height: 100vh;
+    overflow-y: hidden;
+    
 
     .login {
         width: 30rem;
