--- a/src/Pages/Settings/Styles/styles.module.scss
+++ b/src/Pages/Settings/Styles/styles.module.scss
@@ -1,6 +1,5 @@
 .settingsTitle{
     display: flex;
-    width: 100%;
     align-items: center;
     justify-content: space-between;
     background-color: #00838F;
