--- a/src/globalCSS/global.scss
+++ b/src/globalCSS/global.scss
@@ -283,7 +283,6 @@ body {
     font-family: "Inter", sans-serif;
     background: #F7F7F7;
     color: #06152B;
-    overflow: hidden;
 }
 
 :root {
